--- a/vue-nuxt/assets/css/components/_global.scss
+++ b/vue-nuxt/assets/css/components/_global.scss
@@ -1,5 +1,5 @@
 html {
-    @apply bg-primary;
+    @apply bg-primary md:bg-slate-200;
     &.dark {
         @apply bg-darkmode-800;
         body {
@@ -12,7 +12,10 @@ html {
         }
     }
     body {
-        @apply antialiased overflow-x-hidden py-3 px-8 font-roboto text-sm text-slate-800;
+        @apply antialiased overflow-x-hidden font-roboto text-sm text-slate-800;
+        // @include media-breakpoint-down(md) {
+        //     @apply px-8;
+        // }
         // @include media-breakpoint-down(sm) {
         //     @apply px-3;
         // }
