--- a/vue-nuxt/assets/css/components/_notification-content.scss
+++ b/vue-nuxt/assets/css/components/_notification-content.scss
@@ -1,8 +1,8 @@
 .notification-content {
     width: 350px;
-    @include media-breakpoint-down(sm) {
-        width: 280px;
-    }
+    // @include media-breakpoint-down(sm) {
+    //     width: 280px;
+    // }
     .notification-content__title {
         @apply font-medium mb-5;
     }
