--- a/vue-nuxt/assets/css/components/_search-result.scss
+++ b/vue-nuxt/assets/css/components/_search-result.scss
@@ -14,7 +14,7 @@
     }
     .search-result__content {
         transition: margin-top 0.2s;
-        @apply shadow p-5 mt-5;
+        @apply box p-5 mt-5;
         .search-result__content__title {
             @apply font-medium mb-2;
         }
