--- a/vue-nuxt/assets/css/app.scss
+++ b/vue-nuxt/assets/css/app.scss
@@ -11,6 +11,7 @@
  |
  */
  @import "./_tailwind";
+ @import "vue3-tailwind/dist/style.css";
 
  /*
     |--------------------------------------------------------------------------
@@ -61,20 +62,20 @@
  @import "./components/tw-starter/_breadcrumb";
 //  @import "@left4code/tw-starter/dist/css/_accordion";
 //  @import "@left4code/tw-starter/dist/css/_alert";
-//  @import "@left4code/tw-starter/dist/css/_btn";
+ @import "./components/tw-starter/_btn";
  @import "./components/tw-starter/_dropdown";
 //  @import "@left4code/tw-starter/dist/css/_file";
-//  @import "@left4code/tw-starter/dist/css/_form-reset";
-//  @import "@left4code/tw-starter/dist/css/_form-check";
-//  @import "@left4code/tw-starter/dist/css/_form-control";
-//  @import "@left4code/tw-starter/dist/css/_form-help";
-//  @import "@left4code/tw-starter/dist/css/_form-inline";
-//  @import "@left4code/tw-starter/dist/css/_form-label";
-//  @import "@left4code/tw-starter/dist/css/_form-select";
-//  @import "@left4code/tw-starter/dist/css/_image-fit";
-//  @import "@left4code/tw-starter/dist/css/_input-group";
+ @import "./components/tw-starter/_form-reset";
+ @import "./components/tw-starter/_form-check";
+ @import "./components/tw-starter/_form-control";
+ @import "./components/tw-starter/_form-help";
+ @import "./components/tw-starter/_form-inline";
+ @import "./components/tw-starter/_form-label";
+ @import "./components/tw-starter/_form-select";
+ @import "./components/tw-starter/_image-fit";
+ @import "./components/tw-starter/_input-group";
  @import "./components/tw-starter/_intro";
-//  @import "@left4code/tw-starter/dist/css/_modal";
+ @import "./components/tw-starter/_modal";
 //  @import "@left4code/tw-starter/dist/css/_pagination";
 //  @import "@left4code/tw-starter/dist/css/_progress";
 //  @import "@left4code/tw-starter/dist/css/_scrollbar";
@@ -91,7 +92,7 @@
 //  @import "toastify-js/src/toastify";
 //  @import "dropzone/dist/dropzone";
 //  @import "zoom-vanilla.js/dist/zoom";
-//  @import "tabulator-tables/dist/css/tabulator";
+ @import "tabulator-tables/dist/css/tabulator";
 //  @import "tom-select/dist/css/tom-select";
 //  @import "tiny-slider/dist/tiny-slider";
 //  @import "simplebar/src/simplebar";
@@ -106,7 +107,7 @@
   */
  @import "./components/_global";
 //  @import "./components/_login";
-//  @import "./components/_table-report";
+ @import "./components/_table-report";
 //  @import "./components/_report-chart";
  @import "./components/_search";
  @import "./components/_notification";
@@ -114,7 +115,7 @@
 //  @import "./components/_report-box-2";
 //  @import "./components/_report-box-3";
 //  @import "./components/_report-box-4";
-//  @import "./components/_content";
+ @import "./components/_content";
  @import "./components/_top-nav";
  @import "./components/_side-nav";
  @import "./components/_breadcrumb";
@@ -138,7 +139,7 @@
 //  @import "./components/_litepicker";
 //  @import "./components/_tiny-slider";
 //  @import "./components/_tippy";
-//  @import "./components/_tabulator";
+ @import "./components/_tabulator";
 //  @import "./components/_tom-select";
 //  @import "./components/_dropzone";
 //  @import "./components/_ckeditor";
