--- a/vue-nuxt/assets/css/app.scss
+++ b/vue-nuxt/assets/css/app.scss
@@ -106,7 +106,7 @@
   |
   */
  @import "./components/_global";
-//  @import "./components/_login";
+ @import "./components/_login";
  @import "./components/_table-report";
 //  @import "./components/_report-chart";
  @import "./components/_search";
