--- a/vue-nuxt/assets/css/app.scss
+++ b/vue-nuxt/assets/css/app.scss
@@ -79,7 +79,7 @@
 //  @import "@left4code/tw-starter/dist/css/_pagination";
 //  @import "@left4code/tw-starter/dist/css/_progress";
 //  @import "@left4code/tw-starter/dist/css/_scrollbar";
-//  @import "@left4code/tw-starter/dist/css/_tab";
+ @import "./components/tw-starter/_tab";
 //  @import "@left4code/tw-starter/dist/css/_table";
 //  @import "@left4code/tw-starter/dist/css/_typing-dots";
 //  @import "@left4code/tw-starter/dist/css/_zoom-in";
