--- a/vue-nuxt/assets/css/app.scss
+++ b/vue-nuxt/assets/css/app.scss
@@ -11,7 +11,7 @@
  |
  */
  @import "./_tailwind";
- @import "vue3-tailwind/dist/style.css";
+//  @import "vue3-tailwind/dist/style.css";
 
  /*
     |--------------------------------------------------------------------------
