--- a/vue-nuxt/assets/css/app.scss
+++ b/vue-nuxt/assets/css/app.scss
@@ -149,4 +149,5 @@
 //  @import "./components/_source-preview";
 //  @import "./components/_full-calendar";
 //  @import "./components/_pristine";
+@import "./components//swal"
  
